--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
-
-
-
-</body>
+    <head>
+        <title>
+            it9
+        </title>
+    </head>
+    <body style="background-color:powderblue;">
+        <h1>My Name is Amorn S.</h1>
+    </body>
 </html>
-
