--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body style="background-color:powderblue;">
+        <img src="Amorn.jpg" alt="Trulli" width="500" height="333">
         <h1>My Name is Amorn S.</h1>
     </body>
 </html>
