--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body style="background-color:powderblue;">
-        <img src="Amorn.jpg" alt="Trulli" width="500" height="333">
+        <img src="Amorn.jpg" alt="Trulli" width="500" height="333"></br>
         <h1>My Name is Amorn S.</h1>
     </body>
 </html>
