--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body style="background-color:powderblue;">
-        <center><img src="Amorn.jpg" alt="Trulli"></center></br>
+        <center><img src="Amorn.jpg" alt="Trulli" style="width:128px;height:128px;></center></br>
         <h1>My Name is Amorn S.</h1>
     </body>
 </html>
