--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body style="background-color:powderblue;">
-        <center><img src="img/Amorn.jpg" alt="Trulli";></center></br>
+        <center><img src="img/Amorn.jpg" alt="Trulli" width="50" height="60";></center></br>
         <h1>My Name is Amorn S.</h1>
     </body>
 </html>
