--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         </title>
     </head>
     <body style="background-color:powderblue;">
-        <center><img src="img/Amorn.jpg" alt="Trulli" width="50" height="60";></center></br>
-        <h1>My Name is Amorn S.</h1>
+        <center><img src="img/Amorn.jpg" alt="Trulli" width="100" height="200";></center></br>
+        <h3>#WhoAmI</h3>
+        <ul>
+            <li><b>Name </b>: Amorn Soonecharoen</li>
+            <li><b>ชื่อสกุล </b>: นายอมร ซุ้นเจริญ</li>
+            <li>ชื่อ<i>เล่น</i> : ต้าร์</li>
+        </ul>
     </body>
 </html>
